syntax = "proto3";

package proto;
option go_package = "github.com/louiselykke/ChittyChat;proto";


service getCurrentTime {
    rpc getTime (GetTimeRequest) returns (GetTimeReply) {}
}

message GetTimeRequest {}

message GetTimeReply {
    string reply = 1;
}